se agrega modulo para que funcione swagger
